fix: overlapping address in lp, added label in receive address

--- a/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
+++ b/webapp/src/containers/LiquidityPage/components/AddLiquidity/addLiquidity.module.scss
@@ -80,3 +80,14 @@
   overflow: auto;
   height: 100px;
 }
+
+.ellipsisValue {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.dropdownContent {
+  width: 95%;
+  display: inline-flex;
+}
